test/files/neg/bug639.check
bug639.scala:3: error: not found: object a
import a._
       ^
one error found
